--- a/15-June-2019.ipynb
+++ b/15-June-2019.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -484,8 +484,8 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "sumit mitsu\n",
-      "YES\n"
+      "abhi bbhi\n",
+      "NO\n"
      ]
     }
    ],
@@ -515,15 +515,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abcdE\n",
-      "ABCDe\n"
+      "pYtHoN\n",
+      "PyThOn\n"
      ]
     }
    ],
