--- a/21-June-2019.ipynb
+++ b/21-June-2019.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -45,17 +45,12 @@
     "    else:\n",
     "        print(name,'already exist')\n",
     "    return\n",
-    "addContact('name3',9383835463,'name3@rgukt.in')\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "addContact('name3',9383835463,'name3@rgukt.in')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +59,7 @@
        "'name19845672310n130388@rgukt.in\\nname2name19845672310n130388@rgukt.in\\n9845672310name19845672310n130388@rgukt.in\\nn130388@rgukt.in\\nname3name19845672310n130388@rgukt.in\\nname2name19845672310n130388@rgukt.in\\n9845672310name19845672310n130388@rgukt.in\\nn130388@rgukt.in\\n9845672310name19845672310n130388@rgukt.in\\nname2name19845672310n130388@rgukt.in\\n9845672310name19845672310n130388@rgukt.in\\nn130388@rgukt.in\\nn130388@rgukt.in\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +89,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to edit contact in contacts text file\n",
+    "\n",
+    "from packages.validators import phoneNumberValidator as pnv, emailValidator as ev\n",
+    "\n",
+    "import re\n",
+    "def checkContactExists(name):\n",
+    "    filename='Datafiles/contacts.txt'\n",
+    "    with open(filename,'r') as f:\n",
+    "        filedata=f.read()\n",
+    "        pattern=name+','\n",
+    "    return re.search(pattern,filedata)\n",
+    "\n",
+    "def modifyContact(name):\n",
+    "    filename = 'Datafiles/contacts.txt'\n",
+    "    if not checkContactExists(name):\n",
+    "        print(name,'is not found in your contacts list')\n",
+    "    else:\n",
+    "        \n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
