--- a/18-June-2019.ipynb
+++ b/18-June-2019.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -118,8 +118,8 @@
     "t1 = ( )    # Tuple   <br>\n",
     "li = [ ]    # List    <br>\n",
     "#### Difference between Lists and Tuples\n",
-    "Lists are mutable - can be changes / modified \n",
-    "- used to Access, Modify, Add add Delete Data  <br>\n",
+    "Lists are mutable - can be change / modified \n",
+    "- used to Access, Modify, Add and Delete Data  <br>\n",
     "\n",
     "Tuples are immutable - cannot be changed once initialised  <br>\n",
     "- used to access data only\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "(8, 6, 0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
     "\n",
     "t1[-1::-1]  ## Accesing from last to first\n",
     "\n",
-    "t1[-2::]  # Accesing last two elements\n",
+    "t1[-2:]  # Accesing last two elements\n",
     "\n",
     "t1[-3::1]  # Accesing last two elements"
    ]
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values(['value1', 'value2'])"
+       "{'k1': 'value1', 'k2': 'value2'}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,8 @@
     "d1[\"k3\"]=\"V3\"  # Updating a value\n",
     "\n",
     "d1.pop(\"k3\")  # Removing an Element\n",
-    "\n"
+    "\n",
+    "d1\n"
    ]
   },
   {
@@ -442,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22 16 4 70 17 14 26 100 1 32 "
+      "10 83 13 1 69 33 15 53 43 33 "
      ]
     }
    ],
@@ -481,7 +482,7 @@
    ],
    "source": [
     "from Packages import numerical\n",
-    "numerical.isPrime(8102833)"
+    "numerical.isPrime(8102833)  "
    ]
   },
   {
