--- a/20-June-2019.ipynb
+++ b/20-June-2019.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "- ^[1-9][0-9]* 0 $ -> All multiples of 10 excluding 0\n",
     "\n",
-    "- ^^[1-9][0-9]* [05] $ -> All mutiples of 5 other than 5\n",
+    "- ^[1-9][0-9]* [05] $ -> All mutiples of 5 other than 5\n",
     "\n",
     "- ^([1-9][0-9]* [05]) $ |  ^ [5] $ All mutiples of 5 except the number which have preceding zeros\n",
     "\n",
