--- a/23-June-2019.ipynb
+++ b/23-June-2019.ipynb
@@ -35,15 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ab', 'bb', 'bc', 'de', 'afg', 'line', 'in', '1', '2', '3', '4']\n",
-      "11\n"
+      "Data in Line 1\n",
+      "Data in Line 2\n",
+      "Data in Line 3\n",
+      "Data in Line 4\n",
+      "Data in Line 5\n",
+      "Data in Line 6\n",
+      "Anaconda Navigator is a desktop graphical user interface (GUI) included in AnacondaÂ® distribution that allows you to launch applications and easily manage conda packages, environments and channels without using command-line commands. Navigator can search for packages on Anaconda Cloud or in a local Anaconda Repository. It is available for Windows, macOS, and Linux.\n",
+      "['Data', 'in', 'Line', '1', '2', '3', '4', '5', '6', 'Anaconda', 'Navigator', 'is', 'a', 'desktop', 'graphical', 'user', 'interface', '(GUI)', 'included', 'AnacondaÂ®', 'distribution', 'that', 'allows', 'you', 'to', 'launch', 'applications', 'and', 'easily', 'manage', 'conda', 'packages,', 'environments', 'channels', 'without', 'using', 'command-line', 'commands.', 'can', 'search', 'for', 'packages', 'on', 'Cloud', 'or', 'local', 'Repository.', 'It', 'available', 'Windows,', 'macOS,', 'Linux.']\n",
+      "52\n"
      ]
     }
    ],
@@ -62,6 +69,7 @@
     "            x.append(i)\n",
     "    return x\n",
     "filePath = 'DataFiles/data.txt'\n",
+    "print(readFile(filePath))\n",
     "print(uniqueWordCount(filePath))\n",
     "print(len(uniqueWordCount(filePath)))\n",
     "        "
@@ -69,48 +77,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "main file data : ['ab', 'bb', 'bb', 'bc', 'de', 'afg', 'line', 'in', '1', 'line', 'in', '2', 'line', 'in', '3', 'line', 'in', '4']\n",
-      "unique file data : ['ab', 'bb', 'bc', 'de', 'afg', 'line', 'in', '1', '2', '3', '4']\n",
-      "ab : 1\n",
-      "bb : 2\n",
-      "bc : 1\n",
-      "de : 1\n",
-      "afg : 1\n",
-      "line : 4\n",
-      "in : 4\n",
+      "Data : 6\n",
+      "in : 8\n",
+      "Line : 6\n",
       "1 : 1\n",
       "2 : 1\n",
       "3 : 1\n",
-      "4 : 1\n"
+      "4 : 1\n",
+      "5 : 1\n",
+      "6 : 1\n",
+      "Anaconda : 3\n",
+      "Navigator : 2\n",
+      "is : 2\n",
+      "a : 2\n",
+      "desktop : 1\n",
+      "graphical : 1\n",
+      "user : 1\n",
+      "interface : 1\n",
+      "(GUI) : 1\n",
+      "included : 1\n",
+      "AnacondaÂ® : 1\n",
+      "distribution : 1\n",
+      "that : 1\n",
+      "allows : 1\n",
+      "you : 1\n",
+      "to : 1\n",
+      "launch : 1\n",
+      "applications : 1\n",
+      "and : 3\n",
+      "easily : 1\n",
+      "manage : 1\n",
+      "conda : 1\n",
+      "packages, : 0\n",
+      "environments : 1\n",
+      "channels : 1\n",
+      "without : 1\n",
+      "using : 1\n",
+      "command-line : 1\n",
+      "commands. : 0\n",
+      "can : 1\n",
+      "search : 1\n",
+      "for : 2\n",
+      "packages : 2\n",
+      "on : 1\n",
+      "Cloud : 1\n",
+      "or : 1\n",
+      "local : 1\n",
+      "Repository. : 0\n",
+      "It : 1\n",
+      "available : 1\n",
+      "Windows, : 0\n",
+      "macOS, : 0\n",
+      "Linux. : 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Data': 6,\n",
+       " 'in': 8,\n",
+       " 'Line': 6,\n",
+       " '1': 1,\n",
+       " '2': 1,\n",
+       " '3': 1,\n",
+       " '4': 1,\n",
+       " '5': 1,\n",
+       " '6': 1,\n",
+       " 'Anaconda': 3,\n",
+       " 'Navigator': 2,\n",
+       " 'is': 2,\n",
+       " 'a': 2,\n",
+       " 'desktop': 1,\n",
+       " 'graphical': 1,\n",
+       " 'user': 1,\n",
+       " 'interface': 1,\n",
+       " '(GUI)': 1,\n",
+       " 'included': 1,\n",
+       " 'AnacondaÂ®': 1,\n",
+       " 'distribution': 1,\n",
+       " 'that': 1,\n",
+       " 'allows': 1,\n",
+       " 'you': 1,\n",
+       " 'to': 1,\n",
+       " 'launch': 1,\n",
+       " 'applications': 1,\n",
+       " 'and': 3,\n",
+       " 'easily': 1,\n",
+       " 'manage': 1,\n",
+       " 'conda': 1,\n",
+       " 'packages': 2,\n",
+       " '': 6,\n",
+       " 'environments': 1,\n",
+       " 'channels': 1,\n",
+       " 'without': 1,\n",
+       " 'using': 1,\n",
+       " 'command-line': 1,\n",
+       " 'commands': 1,\n",
+       " 'can': 1,\n",
+       " 'search': 1,\n",
+       " 'for': 2,\n",
+       " 'on': 1,\n",
+       " 'Cloud': 1,\n",
+       " 'or': 1,\n",
+       " 'local': 1,\n",
+       " 'Repository': 1,\n",
+       " 'It': 1,\n",
+       " 'available': 1,\n",
+       " 'Windows': 1,\n",
+       " 'macOS': 1,\n",
+       " 'Linux': 1}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Function to print the frequency count of all the elements in a text file\n",
     "\n",
-    "def frequenyCount(filePath):\n",
-    "    filedata = readFile(filePath).split()\n",
-    "    print('main file data',':',filedata)\n",
-    "    x=[]\n",
-    "    y=[]\n",
-    "    for i in filedata:\n",
-    "        if i not in x:\n",
-    "            x.append(i)\n",
-    "    print('unique file data',':',x)\n",
+    "    # Dictionary to be used\n",
+    "            # keys -> unique words\n",
+    "            # values -> count of unique words\n",
+    "    # Two lists\n",
+    "            # all words list \n",
+    "            # unique words list\n",
+    "    # Set\n",
+    "import re\n",
+    "def FreqDistributionOfWords1(filePath):\n",
+    "    filedata = readFile(filePath)\n",
+    "    pattern = '[ .\\n,]'\n",
+    "    filedata = re.split(pattern,filedata)\n",
+    "#     print('All Words',':',filedata)\n",
+    "    x=uniqueWordCount(filePath)\n",
+    "#     print('Unique Words',':',x)\n",
+    "    y={}\n",
     "    for i in x:\n",
-    "        c=y.append(filedata.count(i))\n",
+    "        y[i]=filedata.count(i)\n",
     "        print(i,':',filedata.count(i))\n",
+    "#     print(\"Frequency_Words_Dict\",':',y)\n",
     "    return\n",
-    "frequenyCount(filePath)\n",
-    "        \n",
-    "        "
+    "\n",
+    "def FreqDistributionOfWords2(filePath):\n",
+    "    filedata = readFile(filePath)\n",
+    "    pattern = '[ \\n,.]'\n",
+    "    filedata = re.split(pattern,filedata)\n",
+    "    wordFrequency = {}\n",
+    "    for word in filedata:\n",
+    "        if word not in wordFrequency.keys():\n",
+    "            wordFrequency[word] = 1\n",
+    "        else:\n",
+    "            wordFrequency[word] += 1\n",
+    "    return wordFrequency\n",
+    "\n",
+    "FreqDistributionOfWords1(filePath)     \n",
+    "FreqDistributionOfWords2(filePath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# contacts application\n",
+    "        # Add, Search, List, Modify and Delete Contacts\n",
+    "\n",
+    "# find and replace application\n",
+    "        # Count the total number of occurances of a word\n",
+    "        # Check If word is existing\n",
+    "        # Replace all occurances of a word with another word\n",
+    "# Marks Analysis Application\n",
+    "        # Generate Marks file for n students\n",
+    "        # Input : Marks text file - Each line in the text file contains marks of one student\n",
+    "        # Generates a report with the following information\n",
+    "            # Class Average\n",
+    "            # % of students passed\n",
+    "            # % of students failed\n",
+    "            # % of students with distinction\n",
+    "            # Highest Mark Frequency\n",
+    "            # Lowest Mark Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to generate marks data for n students\n",
+    "from random import randint\n",
+    "def generateMarks(n, lb, ub):\n",
+    "    with open('DataFiles/marks.txt', 'w') as f:\n",
+    "        for i in range(0,n):\n",
+    "            r = randint(lb,ub)\n",
+    "            f.write(str(r) + '\\n')\n",
+    "    return\n",
+    "generateMarks(20,0,25)\n",
+    "            \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -118,11 +289,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# contacts application\n",
-    "\n",
-    "# find and replace application"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -130,6 +297,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
