--- a/21-June-2019.ipynb
+++ b/21-June-2019.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "name3 already exist\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid token (<ipython-input-4-ac6c7fb96b93>, line 32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-ac6c7fb96b93>\"\u001b[1;36m, line \u001b[1;32m32\u001b[0m\n\u001b[1;33m    pnv(09703451892)\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid token\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "    else:\n",
     "        print(name,'already exist')\n",
     "    return\n",
-    "addContact('name3',9383835463,'name3@rgukt.in')\n"
+    "addContact('name3',9383835463,'name3@rgukt.in')"
    ]
   },
   {
