--- a/25-June-2019.ipynb
+++ b/25-June-2019.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -129,16 +129,15 @@
      ]
     },
     {
-     "ename": "UnsupportedOperation",
-     "evalue": "not writable",
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'split'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-ad01b85eed5f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mfilepath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'DataFiles/replace.txt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[0mword\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[0mreplaceWord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-41-ad01b85eed5f>\u001b[0m in \u001b[0;36mreplaceWord\u001b[1;34m(filepath, word)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mreplaceWord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mfiledata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreadFile1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mfiledata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'siri'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiledata\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-41-ad01b85eed5f>\u001b[0m in \u001b[0;36mreadFile1\u001b[1;34m(filepath)\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[0mpattern\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'[  \\n,.]'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mfiledata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfiledata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiledata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiledata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnsupportedOperation\u001b[0m: not writable"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-9742025673f6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[0mfilepath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'DataFiles/replace.txt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[0mword\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mreplaceWord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-15-9742025673f6>\u001b[0m in \u001b[0;36mreplaceWord\u001b[1;34m(filepath, word)\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mfiledata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'siri'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiledata\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiledata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m         \u001b[0ms\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiledata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
      ]
     }
    ],
@@ -163,18 +162,24 @@
     "    filedata = readFile1(filepath)\n",
     "    with open(filepath,'w') as f:\n",
     "        filedata = [w.replace(word, 'siri') for w in filedata]\n",
+    "        s=''\n",
+    "        for i in filedata:\n",
+    "            s+=''.join(i)\n",
+    "            s+='\\n'\n",
+    "        f.write(s)\n",
     "    return filedata\n",
     "import re        \n",
     "def readFile1(filepath):\n",
     "    with open(filepath,'r') as f:\n",
-    "        filedata=f.readline()\n",
-    "        pattern='[  \\n,.]'\n",
+    "        filedata=f.read()\n",
+    "        pattern='[\\n]'\n",
     "        filedata = re.split(pattern,filedata)\n",
     "    return filedata\n",
     "\n",
     "filepath = 'DataFiles/replace.txt'\n",
     "word=input()\n",
     "replaceWord(filepath,word)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -194,137 +199,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name1 : 9845676416 , n130388@rgukt.in\n",
-      "\n",
-      "name1,9845676416,n130388@rgukt.in\n",
-      "name2,8945232312,n130266@rgukt.in\n",
-      "name3,7648992317,n130155@rgukt.in\n"
+      "1.addcontact\n",
+      "2.searchcontact\n",
+      "3.deletecontact\n",
+      "4.listallcontacts\n",
+      "5.modifycontact\n",
+      "enter your choice4\n",
+      "Name :  name1\n",
+      "Phone no :  9845676416 \n",
+      "Email-id :  n130388@rgukt.in\n",
+      " Name :  name2\n",
+      "Phone no :  8945232312 \n",
+      "Email-id :  n130266@rgukt.in\n",
+      " Name :  name3\n",
+      "Phone no :  7648992317 \n",
+      "Email-id :  n130155@rgukt.in\n",
+      " Name :  siri\n",
+      "Phone no :  9703451892 \n",
+      "Email-id :  sireeshareyyi@gmail.com\n",
+      " \n",
+      " press 1 to continue\n",
+      "0 to exit\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "from Packages.validators import phoneNumberValidator as pnv,emailValidator as ev\n",
-    "\n",
+    "filename='DataFiles/contacts.txt'\n",
     "import re\n",
-    "def contact_exists(name):\n",
-    "    filename = 'DataFiles/contacts.txt'\n",
+    "def phnovalidator(no):\n",
+    "    pattern='[9876][0-9]{9}$|^[0][6-9][0-9]{9}$|^[+][9][1][6-9][0-9]{9}$'\n",
+    "    if re.match(pattern,str(no)):\n",
+    "        return True\n",
+    "        #print(\"valid number\")\n",
+    "    else:\n",
+    "        return False\n",
+    "        #print(\"invalid number\")\n",
+    "    return\n",
+    "def emailval(email):\n",
+    "    pattern='^[0-9a-z][0-9a-z_.]{4,13}[0-9a-z][@][0-9a-z]{3,18}[.][a-z]{2,4}$'\n",
+    "    if re.match(pattern,email):\n",
+    "        #print(\"valid\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        #print(\"invalid\")\n",
+    "        return False\n",
+    "def csvtolist(filename):\n",
+    "    li=[]\n",
     "    with open(filename,'r') as f:\n",
-    "        p = name+','\n",
-    "        fd=f.read()\n",
-    "    return re.search(p,fd)\n",
+    "        for line in f:\n",
+    "            li.append(line.split(','))\n",
+    "    return li\n",
     "\n",
-    "def addContact(name,phone,email):\n",
-    "    if not contact_exists():\n",
-    "        if pnv(phone) and ev(email):\n",
-    "            with open(filepath,'a') as f:\n",
-    "                line = name+','+phone+','+email+'\\n'\n",
-    "                f.write(line)\n",
-    "            print(name,\"is added to contacts\")\n",
-    "        else:\n",
-    "            print(\"email or phone is invalid\")\n",
-    "    else:\n",
-    "        print(name,\"already exist\")\n",
-    "    return\n",
     "\n",
-    "# def searchContact(name):\n",
-    "#     filepath = 'DataFiles/contacts.txt'\n",
-    "#     if contact_exists(name):\n",
-    "#         with open(filepath,'r') as f:\n",
-    "#             fd = f.read()\n",
-    "#             p = '[\\n]'\n",
-    "#             lis = re.split(p,fd)\n",
-    "#             for i in lis:\n",
-    "#                 for j in range(len(lis)):\n",
-    "#                     if name == lis[j][:len(name)]:\n",
-    "#                         print(lis[j][:len(name)])\n",
-    "#                         return i\n",
-    "#     else:\n",
-    "#         print(name,\"does not exist\")\n",
-    "        \n",
-    "def searchContact(name):\n",
-    "    filepath = 'DataFiles/contacts.txt'\n",
-    "    if contact_exists(name):\n",
-    "        with open(filepath,'r') as f:\n",
-    "            for i in f:\n",
-    "                i=i.split(',')\n",
-    "                if i[0]==name:\n",
-    "                    print(i[0],':',i[1],',',i[2])\n",
-    "    else:\n",
-    "        print(name,\"does not exist\")\n",
+    "def listofile(li):\n",
+    "    s=''\n",
+    "    for i in li:\n",
+    "        s+=','.join(i)\n",
+    "    return(s)\n",
     "    \n",
-    "searchContact('name1')\n",
     "\n",
-    "def listContacts():\n",
-    "    filepath = 'DataFiles/contacts.txt'\n",
-    "    with open(filepath,'r') as f:\n",
-    "        x=f.read().split()\n",
-    "        if len(x)!=0:\n",
-    "            for i in range(len(x)):\n",
-    "                print(x[i])\n",
+    "def addcontact(name,no,email):\n",
+    "    with open(filename,'a') as f:\n",
+    "        if not searchcontact(name):\n",
+    "            if phnovalidator(int(no)):\n",
+    "                if emailval(email):\n",
+    "                    f.write(name+','+str(no)+','+email+'\\n')\n",
+    "                    print(\"contact added successfully\")\n",
     "        else:\n",
-    "            print(\"empty list of contacts\")\n",
-    "    return\n",
-    "listContacts()\n",
+    "            print(\"invalid,\")\n",
     "\n",
-    "# def editContact(name,newphone,newemail):\n",
-    "#     filepath = 'DataFiles/contacts.txt'\n",
-    "#     if contact_exists(name):\n",
-    "#         with open(filepath,'a') as f:\n",
-    "#             x=readFile(filepath)\n",
-    "#             for i in x:\n",
-    "#                 i=i.split(',')\n",
-    "#                 if i[0] == name:\n",
-    "#                     i[1]=newphone\n",
-    "#                     i[2]=newemail\n",
-    "#                     f.write((i[1]+','+i[2]))\n",
-    "#     else:\n",
-    "#         print(\"contact not exist\")\n",
-    "# editContact('name1',9703451892,'siri1998@gmail.com')\n",
+    "def searchcontact(name):\n",
+    "    fh=csvtolist(filename)\n",
+    "    for line in fh:\n",
+    "        \n",
+    "        if line[0]==name:\n",
+    "            \n",
+    "            #print(line[0],\":\",line[1],\",\",line[2])\n",
+    "            print(\"contact exists\")\n",
+    "            return True\n",
+    "    print(\"contact does not exists\" )    \n",
+    "    return False\n",
     "\n",
+    "def searchwithreturn(name):\n",
+    "    fh=csvtolist(filename)\n",
+    "    for line in range(len(fh)):\n",
+    "        if fh[line][0]==name:\n",
+    "            #print(line[0],\":\",line[1],\",\",line[2])\n",
+    "            #print(\"contact exists\")\n",
+    "            return line\n",
+    "    return -1\n",
     "\n",
-    "def readFile(filepath):\n",
-    "    with open(filepath,'r') as f:\n",
-    "            x=f.read()\n",
-    "    return x\n",
-    "# def modifyContact(name,phone,email):\n",
-    "#     filepath='Data/contacts.txt'\n",
-    "#     filepath2='Data/new_contact.txt'\n",
-    "#     if contact_exists(name):\n",
-    "#         with open(filepath2,'w') as f:\n",
-    "#             x=readFile(filepath)\n",
-    "#             p='[\\n]'\n",
-    "#             lis=re.split(p,x)\n",
-    "#             print(lis)\n",
-    "#             con=[]\n",
-    "#             for i in range(len(lis)):\n",
-    "#                 con=lis[i].split(',')\n",
-    "#                 print(con)\n",
-    "#                 if name in con:\n",
-    "#                     con[1]=phone\n",
-    "#                     con[2]=email\n",
-    "# #                     line=name+','+phone+','+email+'\\n'\n",
-    "#                     f.write(str(con))\n",
-    "#                 else:\n",
-    "#                     f.write(str(con))\n",
-    "# #             for i in x:\n",
-    "# #                 print(i)\n",
-    "# #                 i=i.split(',')\n",
-    "# #                 if i[0] == name:\n",
-    "# #                     i[1]=phone\n",
-    "# #                     i[2]=email\n",
-    "# #                     f.write((i[1]+','+i[2]))\n",
-    "                   \n",
-    "                 \n",
-    "# #                     print(i[0],i[1],i[2])\n",
-    "#     else:\n",
-    "#         print(\"contact Not exits\")"
+    "def delcon(name):\n",
+    "    a=searchwithreturn(name)\n",
+    "    print(a)\n",
+    "    if a!=-1:\n",
+    "        fh=csvtolist(filename)\n",
+    "        fh.pop(a)\n",
+    "        fh=listofile(fh)\n",
+    "        with open(filename,'w') as f:\n",
+    "            f.write(fh)\n",
+    "        print(\"deleted contact  successfully\")\n",
+    "    else:\n",
+    "        print(\"contact not found\")\n",
+    "\n",
+    "def listallcontacts():\n",
+    "    with open(filename,'r') as f:\n",
+    "        f=csvtolist(filename)\n",
+    "        for line in f:\n",
+    "            print(\"Name : \",line[0])\n",
+    "            print(\"Phone no : \",line[1],end=\" \")\n",
+    "            print()\n",
+    "            print(\"Email-id : \",line[2],end=\" \")\n",
+    "#listallcontacts()\n",
+    "def modifycontact(name,no,email):\n",
+    "    with open(filename,'r') as f:\n",
+    "        i=searchwithreturn(name)\n",
+    "        if i!=-1:\n",
+    "            fh=csvtolist(filename)\n",
+    "            \n",
+    "            for i in range(len(fh)):\n",
+    "                if fh[i][0]==name:\n",
+    "                    fh[i][1]=str(no)\n",
+    "                    fh[i][2]=email\n",
+    "                fa=listofile(fh)\n",
+    "                with open(filename,'w') as f:\n",
+    "                    f.write(fa)\n",
+    "            print(\"modified successfully\")\n",
+    "        else:\n",
+    "            print(\"contact does not exists to modify\")\n",
+    "                    \n",
+    "\n",
+    "while 1:\n",
+    "    print(\"1.addcontact\\n2.searchcontact\\n3.deletecontact\\n4.listallcontacts\\n5.modifycontact\")\n",
+    "\n",
+    "    n=int(input(\"enter your choice\"))\n",
+    "    \n",
+    "    if n==1:\n",
+    "        \n",
+    "        name,no,email=input(\"enter the name,no,email\").split(',')\n",
+    "        addcontact(name,no,email)\n",
+    "    elif n==2:\n",
+    "        name=input(\"enter the name\")\n",
+    "        searchcontact(name)\n",
+    "    elif n==3:\n",
+    "        name=input(\"enter the name\")\n",
+    "        delcon(name)\n",
+    "    elif n==4:\n",
+    "        listallcontacts()\n",
+    "    elif n==5:\n",
+    "        name,no,email=input(\"enter the name,no,email\").split(',')\n",
+    "        modifycontact(name,no,email)\n",
+    "    \n",
+    "    print(\"\\n press 1 to continue\\n0 to exit\")\n",
+    "    p=int(input())\n",
+    "    if p==0:\n",
+    "        break\n",
+    "    elif p==1:\n",
+    "        continue"
    ]
   },
   {
